htdocs/theme/raw/sass/components/_btn.scss
// Modifications and extra use cases for bootstrap  buttons

.btn-secondary {
    color: $theme-text-color;
    background-color: $btn-secondary-bg;
    border-color: $btn-secondary-border;
    box-shadow: none;
    &:hover {
        background-color: scale-color($btn-secondary-bg, $lightness: -10.05);
    }
    &.disabled {
        background: $btn-bg-disabled-color;
    }
}

.btn-primary {
    border-color: $btn-primary-border;
    box-shadow: none;
}

.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
    color: inherit;
    background-color: $gray-400;
    border-color: $btn-secondary-border;;
    box-shadow: none;
}

.btn-secondary:not(:disabled):not(.disabled).active, .btn-secondary:not(:disabled):not(.disabled):active, .show>.btn-secondary.dropdown-toggle {
    color: $gray-900;
    background-color: scale-color($btn-secondary-bg, $lightness: -15.26);
    box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
}

.btn.text-left {
    text-align:left;
}

.btn.text-right {
    text-align:right;
}

.btn label {
    min-width: 0;
}

.btn-link-danger {
    color: theme-color("danger");
}

.btn-text {
    color: inherit;
    padding:0;
    background: none;
    border: 0;
    box-shadow: none;
    &:hover,
    &:focus {
        background: none;
        border: 0;
        box-shadow: none;
    }
}

.btn {
    vertical-align: baseline;

    .customrow & {
        margin-top: 25px; // layout builder button alignment
    }
    input {
        margin-top: 0;
    }
    &.checkbox input.checkbox {
        width: auto;
        display: inline-block;
        float: right;
    }
}

.customrow + .btn {
    margin-top: 10px;
    margin-bottom: 5px;
}

// Used on pending friends page
.btn-toggle.card-footer {
    padding:0;
    > .btn {
        border-radius: 0;
        width: 100%;
        float: left;
        height: 42px;
        line-height: 30px;
        text-align: left;
        &:first-child {
            border-radius: 0 0 0 $border-radius;
            border-bottom: 1px solid $card-border-color;
        }
        &:last-child {
            border-radius: 0 0 $border-radius 0;

        }
        .btn {
            padding: 0;
            margin: 0;
            color: inherit;
             &:hover {
                 text-decoration: none;
             }
        }
        form {
            display: inline-block;
        }
        &:hover {
            color: $gray-900;
            background: $gray-100;
            text-decoration: none;

            .icon {
                color: $gray-300;
            }
        }
    }
}

h1 + div > .btn-top-left,
.page-header + div.btn-top-left {
    float: none;
    margin-bottom: 0;
    @include media-breakpoint-up(sm) {
        margin-top: -53px;
        .page-header + & {
            margin-top: -43px;
        }
    }
    form {
        margin: 0 !important;
        display: inline-block;
        .form-group-inline {
            padding: 0;
        }
    }
}

h1 ~ div > .btn-group-top,
.page-header ~ div.btn-group-top,
.page-header + .btn-action-list .btn-group-top,
.nav-tabs +  div.btn-group-top {
    margin-top: -20px;
    margin-left: -100%;
    @include media-breakpoint-down(xs) {
        margin: 0 0 10px 0;
        width: 100%;
        .btn-group .btn,
        .form-as-button,
        .btn {
            margin-bottom: 3px;
            margin-left: 1px;
            margin-right: 1px;
            width: 100%;
            border-right-width: 1px;
            border-radius: $border-radius !important;
            .btn {
                margin-bottom: 0;
            }
        }
        .form-as-button:first-child:not(.last) {
            .btn {
                border-right-width: 1px;
            }
        }
    }
}

.btn-group-top {
    position: relative;
    z-index: 4;
    @include media-breakpoint-up(sm) {
        float: right;
        .btn {
            @include border-top-radius(0);
            border-top: 0;
        }
        .btn-group-top {
            margin: 0;
        }
    }
}

.nav-tabs +  div.btn-group-top{
    margin-top: 0;
}

td.btn-group {
    min-width: 300px;
}

td.action-list-copy {
    min-width: 195px;
    .btn-group-top {
        margin-top: -8px;
    }
}

// Often the same template is used to render buttons at the top of the page and
// in a list group. cf. groups table/groups
.list-group,
.card-header {
    .btn-group-top {
        @include clearfix;
        text-align: right;
        float: right;
        margin-top: 10px;
        @include media-breakpoint-up(md) {
            @include clearfix;
            margin-top: -13px;
            margin-bottom: 11px;
        }
        .btn {
            @extend .btn-sm;
            padding-top: 3px;
            border-top: 1px solid $card-border-color;
            @include media-breakpoint-up(lg) {
                border-top-left-radius: 0;
                border-top-right-radius: 0;
                border-top: 0;
            }
        }
        .btn-top-right {
            margin: 0; // negate nested margin
        }
    }
    .btn-action-list{
        float: right;
        width: 100%;
    }
}
// Edit page configure buttons
.card-secondary .blockinstance-controls .btn-group-top {
    position: absolute;
    top: 11px;
    right: 10px;
    margin-top: -10px;
    .btn {
        border-top-left-radius: 0;
        border-top-right-radius: 0;
        border-color: transparent;
        border-top: 0;
        background: scale-color($btn-secondary-bg, $lightness: 40%);
        &:hover {
            background: rgba($btn-secondary-bg, 1);
        }
    }
}

// Page editor column + and - controls
.btn-header {
    width:100%;

    &.btn-two .btn {
        width: 25%;
        &:first-child {
            width:75%
        }
    }
    &.btn-three .btn {
        width: 50%;
        &:first-child,
        &:last-child {
            width:25%;
        }
    }
}


//page builder collapsible
.btn-group-vertical {
    .btn:not(:first-child) {
        margin-left: 0;
    }
    .indicator {
        margin-left: -4px;
        font-size: $font-size-base - 3;
        padding: 7px 5px 0 0;
        vertical-align: top;
        &.icon-arrows {
            vertical-align: middle;
            margin-left: -7px;
        }
    }
    .title {
        white-space: normal;
        margin-left: 5px;
        display: inline-block;
    }
    .block-icon {
        display: inline-block;
        vertical-align: top;
        margin-top: 5px;
        margin-left: -2px;
        font-size: 14px;
        .col-collapsed & {
            margin-left: 2px;
            font-size: 18px;
        }
    }
     &.btn-accordion {
        .btn {
            font-size: 13px;
            margin-bottom: -1px;
            max-width: 100%;
            overflow: hidden;
            width:100%;
            min-width: 60px;
            &.ui-accordion-header {
                 margin-bottom: -3px;
            }
            &.last {
                border-bottom-radius: 3px;
                background-color: $btn-secondary-bg;
            }
        }
        // To override btn-primary colour
        .btn-primary {
            color: $gray-700;
            background: $gray-400;
            border-color: $btn-secondary-border;
        }
    }
    label {
        font-size: 12px;
        white-space: normal;
        vertical-align: middle;
        padding: 0;
        padding-right: 5px;
        padding-top: 3px;
        width: auto;
        max-width: 85%;
        margin-left: 2px;
    }
}
//page builder collapsible
.btn-accordion.ui-accordion {
    &.btn-help {
        padding-left: 27px;
    }
}
.btn-accordion.ui-accordion .ui-accordion-content {
    @include box-sizing(border-box);
    border-radius: 0;
    margin-top: 10px;
    margin-bottom:15px;
    padding: 0;
    max-width:100%;
    border:0;
    width: 100%;
    .btn-group-vertical {
        @include box-sizing(border-box);
        max-width: 100%;
        width: 100%;
        // take away the edges on inner accordion buttons
        .btn {
            border-radius: 0;
            display:block;
            margin: 0;
            &:not(:last-child) {
                border-bottom: 0;

                &:hover {
                    +.btn {
                        border-top-color: scale-color($btn-secondary-border, $lightness: -15%);
                    ;
                    }
                }
            }
        }
    }
}

// Hack to fix the inline script tags that keep getting in places they don't belong
.btn-group .form-as-button.last + script + .btn {
    margin-left: -1px;
}

.btn {
    .icon-chevron-down {
        opacity: 0.5;
    }
    &:hover {
        .icon-chevron-down {
            opacity: 1;
        }
    }
}

.btn:disabled {
    .icon {
        opacity:0.3;
    }
}

// Fix the compose button positionning in the inbox/sent notifications pages.
.notifications + #messages + h1 {
    border-bottom: none;
    display: inline-block;
    margin-bottom: 0;
    padding-bottom: 6.5px;
    + .btn-with-heading {
        float: right;
    }
}

.collapsible-group + .button {
    margin-top: 30px;
}

.socialbtn {
    margin-bottom: 10px;
}

// edit page btn-group
.btn-toolbar .btn-title {
    padding-left: 5px;
    @include media-breakpoint-between(sm, md) {
        @include sr-only;
    }
}

// Group categories.php: 138
.btn-add-group {
    margin-top: 20px;
}

.reportsettings .btn.filter {
    line-height: 1;
    padding: 1px 4px;
}

// Tinymce primary button
.mce-container,
.mce-widget,
.mce-reset {
    .mce-primary {
        background-color: $btn-primary-bg;
        border-color: $btn-primary-border;
        font-family: $font-family-sans-serif;

        &:hover {
            background-color: scale-color($btn-primary-bg, $lightness: -32%);

        }

        .mce-txt {
            color: $btn-primary-color;
        }
    }
}

.modal-tinymce {
    .pieform {
            button.submit {
            background-color: $btn-primary-bg;
            border-color: $btn-primary-border;
            font-family: $font-family-sans-serif;
            color: $btn-primary-color;

            &:hover {
                background-color: scale-color($btn-primary-bg, $lightness: -32%);
            }
        }
    }
}

.btn-sm,
.btn-group .btn.btn-sm {
    font-size: $font-size-base / 1.1665;
    border: 1px solid $btn-secondary-border;
    padding: 0.14375rem 0.625rem;
}

.card.first .card-header {
    a:not(.secondary-link),
    a.btn-sm {
        border-radius: $border-radius-sm;

        &:last-child {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
        }
        &:first-child {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
        }
    }
}

// Page/Collections pageactions btns
.pageactions {
    margin-right: -1px;

    .btn-group-vertical .btn {
        &:last-child {
            border-bottom-right-radius: 0;
        }
        &:first-child {
            border-top-right-radius: 0;
        }

        &.dropdown-toggle {
            border-bottom-right-radius: 0;
        }
        &.addaction {
            border-top-left-radius: 0;
            margin-top: -1px;
        }
    }
}

// Profile page accept friends form
.pendingfriendscard {
    .btn form {
        display: inline-block;

        button {
            padding: 0;
            border: 0;

            &:hover,
            &:focus {
                text-decoration: none;
            }
        }
    }
}

